overflow fix in review

--- a/src/components/Page/ProductPage/ProductReviews/Review/_review.scss
+++ b/src/components/Page/ProductPage/ProductReviews/Review/_review.scss
@@ -5,6 +5,7 @@
   border-radius: 10px;
   margin: 8px 0;
   padding: 16px;
+  overflow: hidden;
 
   &__top-line {
     display: flex;
